[package]
name = "emit_ansi_term"
version = "0.2.0"
authors = ["Nicholas Blumhardt <nblumhardt@nblumhardt.com>"]
description = "An ANSI (colored) terminal collector for emit."
license = "Apache-2.0"
homepage = "https://github.com/emit-rs/emit_ansi_term"
keywords = ["log", "logging"]

[dependencies]
emit = "0.10"
ansi_term = "0.7.4"
chrono = "0.2"
